youtube native component

--- a/blog/2023-02-26-release-v1.6.md
+++ b/blog/2023-02-26-release-v1.6.md
@@ -42,7 +42,7 @@ With AuroraBoot, users can prepare multiple nodes in a lab before shipment or de
 
 You can see AuroraBoot in action here, with [a full e2e example](https://kairos.io/docs/examples/p2p_e2e/) on how to use it with p2p in Kairos, and in the video below:
 
-{{< youtube id="7Vym18wz9Uw" title="Kairos and libp2p" >}}
+<YouTube id="7Vym18wz9Uw" title="Kairos and libp2p" />
 
 ## Improvements to the WebUI for a simplified user experience
 
