Adapt docs to reference hadron

--- a/docs/installation/trustedboot.mdx
+++ b/docs/installation/trustedboot.mdx
@@ -11,6 +11,10 @@ import TabItem from '@theme/TabItem';
 
 "Trusted Boot" is a combination of technologies that allows us to guarantee that a system was not tampered with, and the user-data is protected by cold attacks, it is composed by FDE, Secure Boot and Measured Boot.
 
+:::warning Tested distributions
+Commands in this page are written for Hadron, but if adapted they should work on these other distributions: Ubuntu 24.04 and Fedora 40.
+:::
+
 If you want to learn more on what Trusted Boot is and how it works, see the [Trusted Boot Architecture](/docs/architecture/trustedboot) page. This page describes how to enable Trusted Boot support in Kairos.
 
 Kairos supports Trusted boot by generating specific installable medium. This feature is optional and works alongside how Kairos works.
